<resources>
    <string name="app_name">My Application</string>
    <string name="poster_name">Wrath of man poster</string>
    <string name="film_genre">боевики</string>
    <string name="release_date">22.04.2021</string>
    <string name="age_limit">18+</string>
    <string name="film_name">Гнев человеческий</string>
    <string name="film_description">Эйч — загадочный и холодный на вид джентльмен,
        но внутри него пылает жажда справедливости. Преследуя свои мотивы, он
        внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии
        многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре
        у каждого своя роль, но под подозрением оказываются все. Виновных же
        обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="first_actor">Джейсон Стэйтем</string>
    <string name="second_actor">Холт Маккэллани</string>
    <string name="third_actor">Джош Харнетт</string>
    <string name="filled_star">Звезда рейтинга</string>
    <string name="unfilled_star">Эта звезда рейтинга отсутствует</string>
    <string name="home">Home button</string>
    <string name="profile">Profile button</string>

    <string name="search_button">Search button</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="genre1">боевики</string>
    <string name="genre2">драмы</string>
    <string name="genre3">комедии</string>
    <string name="genre4">артхаус</string>
    <string name="genre5">мелодрамы</string>


    <string name="main_rating_text">Рейтинг: %1$d</string>
    <string name="main_age_restriction_text">%1$d+</string>
    <string name="main_click_message">Название: %1$s</string>
    <string name="main_empty_message">Тут должен был быть текст</string>

    <string name="empty_string"></string>
</resources>