<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/poster_name"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/image_poster" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_rectangle"
                android:contentDescription="@string/film_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/film_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/film_genre"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle"
                app:layout_constraintEnd_toEndOf="@+id/rectangle"
                app:layout_constraintStart_toStartOf="@id/rectangle"
                app:layout_constraintTop_toTopOf="@id/rectangle" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/film_genre"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ellipse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_ellipse"
                android:contentDescription="@string/age_limit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/age_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age_limit"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/ellipse"
                app:layout_constraintEnd_toEndOf="@+id/ellipse"
                app:layout_constraintStart_toStartOf="@+id/ellipse"
                app:layout_constraintTop_toTopOf="@+id/ellipse" />

            <TextView
                android:id="@+id/film_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:text="@string/film_name"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="94dp"
                android:background="@drawable/ic_filledstar"
                android:contentDescription="@string/filled_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="94dp"
                android:background="@drawable/ic_filledstar"
                android:contentDescription="@string/filled_star"
                app:layout_constraintStart_toEndOf="@id/star1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="94dp"
                android:background="@drawable/ic_filledstar"
                android:contentDescription="@string/filled_star"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="94dp"
                android:background="@drawable/ic_filledstar"
                android:contentDescription="@string/filled_star"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="94dp"
                android:background="@drawable/ic_unfilledstar"
                android:contentDescription="@string/unfilled_star"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/film_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="8dp"
                android:text="@string/film_description"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="298dp"
                android:text="@string/actors"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/scrollLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="332dp"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="@id/scrollLine">


                    <ImageView
                        android:id="@+id/imageActor1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/first_actor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/image_actor1" />


                    <ImageView
                        android:id="@+id/imageActor2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/second_actor"
                        app:layout_constraintStart_toEndOf="@id/imageActor1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/image_actor2" />

                    <ImageView
                        android:id="@+id/imageActor3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/third_actor"
                        app:layout_constraintStart_toEndOf="@id/imageActor2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/image_actor3" />

                    <TextView
                        android:id="@+id/nameActor1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/first_actor"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/imageActor1"
                        app:layout_constraintTop_toBottomOf="@id/imageActor1" />

                    <TextView
                        android:id="@+id/nameActor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/second_actor"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/imageActor2"
                        app:layout_constraintTop_toBottomOf="@id/imageActor2" />

                    <TextView
                        android:id="@+id/nameActor3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/third_actor"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/imageActor3"
                        app:layout_constraintTop_toBottomOf="@id/imageActor3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>


            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_home"
                android:contentDescription="@string/home"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollLine" />

            <ImageView
                android:id="@+id/profileButton"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_profile"
                android:contentDescription="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/scrollLine" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>